clusters/homelab/apps/quixsi/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lets-party
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lets-party
  namespace: lets-party
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lets-party
  template:
    metadata:
      labels:
        app: lets-party
    spec:
      containers:
        - name: lets-party
          image: ghcr.io/quixsi/core:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
          - mountPath: /config
            name: database
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: quixsi-database
---
apiVersion: v1
kind: Service
metadata:
  name: lets-party
  namespace: lets-party
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lets-party
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lets-party
  namespace: lets-party
spec:
  ingressClassName: nginx
  rules:
    - host: quixsi.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lets-party
                port:
                  number: 8080
